# swh-objstorage

./: .copier-answers.yml  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CONTRIBUTORS  Jenkinsfile  MANIFEST.in  Makefile.local  PKG-INFO  README.md  README.rst  conftest.py  mypy.ini  objstorage_pathslicing.py  pyproject.toml  pytest.ini  requirements-azure.txt  requirements-swh.txt  requirements-test.txt  requirements-winery.txt  requirements.txt  setup.cfg  setup.py  swh-objstorage_0.0.1.orig.tar.gz.delta  swh-objstorage_0.0.1.orig.tar.gz.id  swh-objstorage_0.0.10.orig.tar.gz.delta  swh-objstorage_0.0.10.orig.tar.gz.id  swh-objstorage_0.0.11.orig.tar.gz.delta  swh-objstorage_0.0.11.orig.tar.gz.id  swh-objstorage_0.0.12.orig.tar.gz.delta  swh-objstorage_0.0.12.orig.tar.gz.id  swh-objstorage_0.0.13.orig.tar.gz.delta  swh-objstorage_0.0.13.orig.tar.gz.id  swh-objstorage_0.0.14.orig.tar.gz.delta  swh-objstorage_0.0.14.orig.tar.gz.id  swh-objstorage_0.0.15.orig.tar.gz.delta  swh-objstorage_0.0.15.orig.tar.gz.id  swh-objstorage_0.0.16.orig.tar.gz.delta  swh-objstorage_0.0.16.orig.tar.gz.id  swh-objstorage_0.0.17.orig.tar.gz.delta  (+112 more)
debian/: changelog  control  rules
dockerfiles/: Dockerfile.lint
docs/: cli.rst  index.rst  winery.rst
swh.objstorage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
swh/objstorage/: __init__.py  checker.py  cli.py  constants.py  exc.py  factory.py  interface.py  metrics.py  multiplexer.py  objstorage.py  objstorage_in_memory.py  objstorage_pathslicing.py  objstorage_rados.py  pytest_plugin.py  utils.py
swh/objstorage/api/: client.py  common.py  server.py
swh/objstorage/backends/: azure.py  generator.py  http.py  in_memory.py  libcloud.py  noop.py  pathslicing.py  rados.py  seaweed.py
swh/objstorage/backends/seaweedfs/: __init__.py  http.py  objstorage.py
swh/objstorage/backends/winery/: __init__.py  cli.py  database.py  gunicorn.py  housekeeping.py  objstorage.py  pools.py  roshard.py  rwshard.py  settings.py  sharedbase.py  sleep.py  stats.py  throttler.py
swh/objstorage/backends/winery/pools/: __init__.py  rbd.py  shard.py
swh/objstorage/backends/winery/sql/: 30-schema.sql
swh/objstorage/backends/winery/sql/upgrades/: 002.sql  003.sql  004.sql
swh/objstorage/cloud/: __init__.py  objstorage_azure.py  objstorage_cloud.py
swh/objstorage/multiplexer/: __init__.py  multiplexer_objstorage.py  striping_objstorage.py
swh/objstorage/multiplexer/filter/: __init__.py  filter.py  id_filter.py  read_write_filter.py  resilient_filter.py
swh/objstorage/proxies/: readonly.py
swh/objstorage/tests/: conftest.py  objstorage_testing.py  server_testing.py  test_checker.py  test_interface.py  test_multiplexer_filter.py  test_objstorage.py  test_objstorage_api.py  test_objstorage_azure.py  test_objstorage_cloud.py  test_objstorage_http.py  test_objstorage_in_memory.py  test_objstorage_instantiation.py  test_objstorage_multiplexer.py  test_objstorage_noop.py  test_objstorage_pathslicing.py  test_objstorage_random_generator.py  test_objstorage_seaweedfs.py  test_objstorage_striping.py  test_objstorage_winery.py  test_pathslicer.py  test_readonly_filter.py  test_server.py  winery_benchmark.py  winery_testing_helpers.py
swh/objstorage/tests/winery/: conftest.py  test_housekeeping.py  test_objstorage_winery.py  test_objstorage_winery_rbd.py  test_objstorage_winery_shard.py  test_winery_cli.py  test_winery_mixedpools.py  test_winery_multipool.py  winery_objstorage_testing.py  winery_testing_helpers.py
winery-test-environment/: README.md  ansible.cfg  bootstrap.yml  build-vms.sh  ceph.yml  fed4fire.rspec  fed4fire.sh  grid5000.yml  libvirt.yml  osd.yml  remote-tox.sh  render-stats.py  requirements.txt  rng.xml  rw.yml  tests.yml
winery-test-environment/inventory/: groups.yml  hosts.yml  osd.yml
winery-test-environment/inventory/group_vars/all/: rw.yml
winery-test-environment/mitogen-strategy/: README.txt
